@@ -1,19 +1,21 @@
 package edu.ntnu.idatt2003.view;
 
+import static edu.ntnu.idatt2003.view.components.ComboBoxFactory.createComboBox;
+import static edu.ntnu.idatt2003.view.components.MouseHoverBoxFactory.createMouseHoverBox;
+import static edu.ntnu.idatt2003.view.components.TextBoxAndTextFieldContainerFactory.createTextBoxWithTextFieldsContainer;
+import static edu.ntnu.idatt2003.view.components.TextBoxFactory.createTextBox;
+import static edu.ntnu.idatt2003.view.components.TextFieldFactory.createTextField;
+
 import edu.ntnu.idatt2003.controller.MainPageController;
-import edu.ntnu.idatt2003.utils.TransformationUtil;
+import edu.ntnu.idatt2003.utils.TransformationParser;
 import edu.ntnu.idatt2003.model.ChaosGameDescriptionFactory;
 import edu.ntnu.idatt2003.model.ChaosGameObserver;
 import edu.ntnu.idatt2003.utils.Sizes;
 import edu.ntnu.idatt2003.view.components.ChaosImage;
 import edu.ntnu.idatt2003.view.components.StyledButton;
-import edu.ntnu.idatt2003.view.components.StyledComboBox;
-import edu.ntnu.idatt2003.view.components.StyledTextField;
-import java.io.File;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Locale;
 import java.util.Objects;
 import javafx.geometry.Pos;
 import javafx.scene.Node;
@@ -21,17 +23,13 @@ import javafx.scene.Scene;
 import javafx.scene.control.Alert;
 import javafx.scene.control.ButtonType;
 import javafx.scene.control.ComboBox;
-import javafx.scene.control.Label;
 import javafx.scene.control.TextField;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
-import javafx.scene.layout.Pane;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.Region;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
-import javafx.stage.FileChooser;
-import javafx.stage.Stage;
 
 /**
  * The MainPageView class is the main page of the application.
@@ -46,8 +44,7 @@ public class MainPageView extends Scene implements ChaosGameObserver {
   private static final int COMPONENT_HEIGHT = 40;
   private static final int BUTTON_WIDTH = (int) (Sizes.SCREEN_WIDTH) / BUTTON_COUNT;
   private static final int DEFAULT_SPACING = 10;
-  private TextField x0Field;
-  private TextField x1Field;
+  private final EventHandler eventHandler;
   private TransformationType selectedTransformation;
 
   /**
@@ -61,7 +58,7 @@ public class MainPageView extends Scene implements ChaosGameObserver {
             .getResource("/styles/mainPage.css")).toExternalForm());
     this.getStylesheets().add(Objects.requireNonNull(getClass()
             .getResource("/styles/components.css")).toExternalForm());
-
+    this.eventHandler = new EventHandler(mainPageController, this);
     root = (BorderPane) this.getRoot();
     this.selectedTransformation = TransformationType.AFFINE;
     this.controller = mainPageController;
@@ -134,9 +131,9 @@ public class MainPageView extends Scene implements ChaosGameObserver {
   private HBox createDynamicJuliaContainer() {
     HBox dynamicJuliaContainer = new HBox(DEFAULT_SPACING);
     dynamicJuliaContainer.setAlignment(Pos.BOTTOM_CENTER);
-    x0Field = new StyledTextField("x: ", 100, 20);
-    x1Field = new StyledTextField("y: ", 100, 20);
-    if (TransformationUtil.fractalIsJulia(controller.getGame())) {
+    TextField x0Field = createTextField("x: ", 100, 20);
+    TextField x1Field = createTextField("y: ", 100, 20);
+    if (TransformationParser.fractalIsJulia(controller.getGame())) {
       VBox juliaInformationContainer = new VBox(DEFAULT_SPACING);
       HBox.setHgrow(juliaInformationContainer, Priority.ALWAYS);
       juliaInformationContainer.getChildren().addAll(
@@ -146,7 +143,8 @@ public class MainPageView extends Scene implements ChaosGameObserver {
       );
       dynamicJuliaContainer.getChildren().addAll(
               juliaInformationContainer,
-              mouseBox()
+              createMouseHoverBox("Hover over me!", 125,
+                      (box, e) -> eventHandler.handleMouseHoverOnMouseBox(x0Field, x1Field, box, e))
       );
     }
     return dynamicJuliaContainer;
@@ -164,61 +162,6 @@ public class MainPageView extends Scene implements ChaosGameObserver {
   }
 
   /**
-   * Creates a text box with the specified text. The text box is styled with the
-   * "text-box" style class. The text box is a StackPane with a Label as a child.
-   * The text box is configured to grow horizontally.
-   *
-   * @param text The text to display in the text box.
-   * @return The text box.
-   */
-  private StackPane createTextBox(String text) {
-    StackPane textBox = new StackPane();
-    textBox.getStyleClass().add("text-box");
-    HBox.setHgrow(textBox, Priority.ALWAYS);
-    textBox.getChildren().add(new Label(text));
-    return textBox;
-  }
-
-  /**
-   * Creates a HBox containing a text box with the specified text and as many text fields
-   * as specified is given prompt text to, which gets the size given as parameters.
-   *
-   * @param text        The text to display in the text box.
-   * @param width       The width of the text field.
-   * @param height      The height of the text field.
-   * @param promptTexts The prompt texts for the text fields.
-   * @return The HBox containing the text box and text fields.
-   */
-  private HBox createTextBoxWithTextField(String text, int width,
-                                          int height, String... promptTexts) {
-    HBox container = new HBox(DEFAULT_SPACING);
-    container.getChildren().add(createTextBox(text));
-    for (String promptText : promptTexts) {
-      container.getChildren().add(new StyledTextField(promptText, width, height));
-    }
-    return container;
-  }
-
-  /**
-   * Creates a HBox containing a text box with the specified text and as many text fields
-   * as the length of the doubles array, which gets the height and with given as parameters.
-   *
-   * @param text   The text to display in the text box.
-   * @param width  The width of the text field.
-   * @param height The height of the text field.
-   * @param coords The text for the StyledTextField.
-   * @return The HBox containing the text box and text fields.
-   */
-  private HBox createTextBoxWithTextField(String text, int width, int height, double[] coords) {
-    HBox container = new HBox(DEFAULT_SPACING);
-    container.getChildren().add(createTextBox(text));
-    for (double coordinate : coords) {
-      container.getChildren().add(new StyledTextField(coordinate, width, height));
-    }
-    return container;
-  }
-
-  /**
    * Creates a button container with a ComboBox to change the type
    * of transformation, buttons for running steps/resetting, the
    * transformation and input field to type custom amount of steps.
@@ -233,69 +176,24 @@ public class MainPageView extends Scene implements ChaosGameObserver {
     StackPane.setAlignment(buttonContainer, Pos.TOP_CENTER);
 
     buttonContainer.getChildren().addAll(
-            createComboBox(),
-            createCustomComboBox(),
+            createComboBox("Fractals", BUTTON_WIDTH, COMPONENT_HEIGHT,
+                    Arrays.asList(ChaosGameDescriptionFactory.DescriptionTypeEnum.values()),
+                    (box, e) -> eventHandler.handleChangeFractal(box)),
+            createComboBox("Custom fractals", BUTTON_WIDTH, COMPONENT_HEIGHT,
+                    controller.getCustomFractalNames(),
+                    (box, e) -> eventHandler.handleChangeFractal(box)),
             new StyledButton("10 Steps", BUTTON_WIDTH, COMPONENT_HEIGHT,
-                    e -> controller.runSteps(10)),
+                    e -> eventHandler.handleRunSteps(10)),
             new StyledButton("100 Steps", BUTTON_WIDTH, COMPONENT_HEIGHT,
-                    e -> controller.runSteps(100)),
+                    e -> eventHandler.handleRunSteps(100)),
             new StyledButton("1000 Steps", BUTTON_WIDTH, COMPONENT_HEIGHT,
-                    e -> controller.runSteps(1000)),
-            createStepsTextField(),
+                    e -> eventHandler.handleRunSteps(1000)),
+            createTextField("Steps", BUTTON_WIDTH, COMPONENT_HEIGHT,
+                    (box, e) -> eventHandler.handleRunCustomSteps(box)),
             new StyledButton("Reset", BUTTON_WIDTH, COMPONENT_HEIGHT,
-                    e -> controller.runSteps(-1))
+                    e -> eventHandler.handleReset())
     );
     return buttonContainer;
-  }
-
-  private ComboBox<ChaosGameDescriptionFactory.DescriptionTypeEnum> createComboBox() {
-    StyledComboBox<ChaosGameDescriptionFactory.DescriptionTypeEnum> transformMenu =
-            new StyledComboBox<>("Fractals", BUTTON_WIDTH, COMPONENT_HEIGHT,
-                    Arrays.asList(ChaosGameDescriptionFactory.DescriptionTypeEnum.values())
-            );
-    transformMenu.setOnAction(e -> controller.changeFractal(transformMenu.getValue()));
-    return transformMenu;
-  }
-
-  private StyledTextField createStepsTextField() {
-    StyledTextField stepsField = new StyledTextField("Steps", BUTTON_WIDTH, COMPONENT_HEIGHT);
-    stepsField.getStyleClass().set(0, "button");
-    stepsField.setOnAction(e -> {
-      controller.runCustomSteps(stepsField.getText());
-      stepsField.clear();
-    });
-    return stepsField;
-  }
-
-  /**
-   * Creates a StyledComboBox with setOnAction to change the fractal based on
-   * the selected value.
-   *
-   * @return The ComboBox with custom fractals.
-   */
-  private ComboBox<String> createCustomComboBox() {
-    StyledComboBox<String> customMenu = new StyledComboBox<>("Custom fractals",
-            BUTTON_WIDTH, COMPONENT_HEIGHT, controller.getCustomFractalNames());
-    customMenu.getItems().add("Add new");
-    customMenu.setOnAction(e -> controller.changeFractal(customMenu.getValue()));
-    return customMenu;
-  }
-
-  /**
-   * Opens a file chooser dialog that enables the user to upload a custom
-   * text file with a chaos game description. The file is then uploaded
-   * by the controller. If an exception occurs, an alert is shown.
-   */
-  private void uploadFile() {
-    FileChooser fileChooser = new FileChooser();
-    fileChooser.getExtensionFilters().add(
-            new FileChooser.ExtensionFilter("Text Files", "*.txt"));
-
-    Stage fileChooserStage = new Stage();
-    File file = fileChooser.showOpenDialog(fileChooserStage);
-    if (file != null) {
-      controller.uploadFile(file);
-    }
   }
 
   /**
@@ -335,21 +233,29 @@ public class MainPageView extends Scene implements ChaosGameObserver {
    */
   public VBox createAddFractalPanel() {
     VBox addPanel = createMainPanel();
-    TextField fractalName = new StyledTextField("Fractal name", 210, 20);
+    TextField fractalName = createTextField("Fractal name", 210, 20);
     fractalName.setText(controller.getCurrentFractalName());
-    ComboBox<TransformationType> transformationComboBox = createAddComboBox();
+    ComboBox<TransformationType> transformationComboBox = createComboBox("Transformation",
+            210, COMPONENT_HEIGHT,
+            Arrays.asList(TransformationType.values()),
+            (box, e) -> eventHandler.handleEditTransformationChoice(box),
+            getTransformationComboBoxValue());
     HBox startVectorField;
     HBox endVectorField;
     if (controller.isAddingCustomFractal()) {
-      startVectorField = createTextBoxWithTextField("Start vector:", 100, 20,
+      startVectorField = createTextBoxWithTextFieldsContainer(
+              DEFAULT_SPACING, "Start vector:", 100, 20,
               "x0", "x1");
-      endVectorField = createTextBoxWithTextField("End vector:", 100, 20,
-              "x0", "x1");
+      endVectorField = createTextBoxWithTextFieldsContainer(
+              DEFAULT_SPACING, "End vector:", 100,
+              20, "x0", "x1");
     } else {
-      startVectorField = createTextBoxWithTextField("Min vector:", 100, 20,
-              controller.getMinCoordsX());
-      endVectorField = createTextBoxWithTextField("Max vector:", 100, 20,
-              controller.getMaxCoordsX());
+      startVectorField = createTextBoxWithTextFieldsContainer(
+              DEFAULT_SPACING, "Min vector:", 100,
+              20, controller.getMinCoordsX());
+      endVectorField = createTextBoxWithTextFieldsContainer(
+              DEFAULT_SPACING, "Max vector:", 100,
+              20, controller.getMaxCoordsX());
     }
 
     VBox transformationVbox = createTransformationVbox(transformationComboBox);
@@ -369,17 +275,19 @@ public class MainPageView extends Scene implements ChaosGameObserver {
             new HBox(
                     DEFAULT_SPACING,
                     new StyledButton("Save", 20,
-                            e -> saveFractal(fractalName, transformationComboBox,
-                                    transformationVbox, startVectorField, endVectorField)),
-                    new StyledButton("Cancel", 20, e -> render()),
+                            e -> eventHandler.handleSave(
+                                    fractalName.getText(),
+                                    getTransformationList(
+                                            transformationComboBox.getValue(),
+                                            transformationVbox),
+                                    getInputVector(startVectorField),
+                                    getInputVector(endVectorField)
+                            )
+                    ),
+                    new StyledButton("Cancel", 20, e -> eventHandler.handleCancel()),
                     new StyledButton("Save current locally", 20,
-                            e -> {
-                              FileChooser fileChooser = new FileChooser();
-                              fileChooser.getExtensionFilters().add(
-                                      new FileChooser.ExtensionFilter("Text Files", "*.txt"));
-                              controller.saveToLocalDirectory(fileChooser.showSaveDialog(null));
-                            }),
-                    new StyledButton("Add File", 100, 20, e -> uploadFile())
+                            e -> eventHandler.handleSaveLocally()),
+                    new StyledButton("Add File", 100, 20, e -> eventHandler.handleUploadFile())
             )
 
     );
@@ -387,92 +295,14 @@ public class MainPageView extends Scene implements ChaosGameObserver {
     return addPanel;
   }
 
-  private ComboBox<TransformationType> createAddComboBox() {
-    StyledComboBox<TransformationType> transformMenu = new StyledComboBox<>("Transformation",
-            210, COMPONENT_HEIGHT, Arrays.asList(TransformationType.values()));
-    transformMenu.setOnAction(e -> {
-      selectedTransformation = transformMenu.getValue();
-      controller.changeFractal("add new");
-    });
+  private TransformationType getTransformationComboBoxValue() {
     if (controller.isAddingCustomFractal()) {
-      transformMenu.setValue(this.selectedTransformation);
-    } else if (TransformationUtil.fractalIsJulia(controller.getGame())) {
-      transformMenu.setValue(TransformationType.JULIA);
+      return selectedTransformation;
+    } else if (TransformationParser.fractalIsJulia(controller.getGame())) {
+      return TransformationType.JULIA;
     } else {
-      transformMenu.setValue(TransformationType.AFFINE);
+      return TransformationType.AFFINE;
     }
-    return transformMenu;
-  }
-
-  /**
-   * Creates a VBox containing input fields for transformations.
-   *
-   * @return a VBox configured with input TextFields.
-   */
-  private VBox createTransformationVbox(ComboBox<TransformationType> transformationComboBox) {
-    VBox vbox = new VBox(10);
-    vbox.setFillWidth(true);
-    vbox.setAlignment(Pos.CENTER);
-    String textBoxText = "Transformation:";
-    if (transformationComboBox.getValue() == TransformationType.AFFINE) {
-      vbox.getChildren().add(
-              new StyledButton("Add Transformation", 250, 20,
-                      e -> vbox.getChildren().add(createTextBoxWithTextField(textBoxText,
-                              55, 20, "a00", "a01", "a10", "a11", "v0", "v1"))
-              )
-      );
-    }
-    if (!controller.isAddingCustomFractal()) {
-      for (double[] coords : TransformationUtil.getTransformList(controller.getGame())) {
-        vbox.getChildren().add(createTextBoxWithTextField(textBoxText,
-                55, 20, coords));
-      }
-    } else if (controller.isAddingCustomFractal()
-            && transformationComboBox.getValue() == TransformationType.JULIA) {
-      vbox.getChildren().add(createTextBoxWithTextField(textBoxText,
-              55, 20, "c0", "c1"));
-    }
-    return vbox;
-  }
-
-  /**
-   * Creates a generic VBox panel with spacing and alignment.
-   *
-   * @return a VBox configured as the main panel.
-   */
-  private VBox createMainPanel() {
-    VBox panel = new VBox(10);
-    panel.getStyleClass().add("add-panel");
-    panel.setAlignment(Pos.CENTER);
-    return panel;
-  }
-
-  /**
-   * Enum representing the types of transformations.
-   */
-  public enum TransformationType {
-    JULIA, AFFINE
-  }
-
-  /**
-   * Saves the fractal with the given parameters.
-   *
-   * @param fractalName            the name of the fractal.
-   * @param transformationComboBox the ComboBox for selecting transformation types.
-   * @param transformationVbox     the HBox containing the input fields for transformations.
-   * @param startVectorField       the TextField for the start vector.
-   * @param endVectorField         the TextField for the end vector.
-   */
-  private void saveFractal(TextField fractalName,
-                           ComboBox<TransformationType> transformationComboBox,
-                           VBox transformationVbox, HBox startVectorField,
-                           HBox endVectorField) {
-    List<String[]> transformations = getInputInformation(transformationComboBox.getValue(),
-            transformationVbox);
-    String[] startVector = getInputVector(startVectorField);
-    String[] endVector = getInputVector(endVectorField);
-    controller.addCustomFractal(
-            startVector, endVector, transformations, fractalName.getText());
   }
 
   /**
@@ -482,11 +312,12 @@ public class MainPageView extends Scene implements ChaosGameObserver {
    * @param transformationVbox     the HBox containing the input fields for transformations.
    * @return a list of Transform2D objects.
    */
-  private List<String[]> getInputInformation(TransformationType selectedTransformation,
-                                             VBox transformationVbox) {
-    if (selectedTransformation == TransformationType.JULIA) {
+  private List<String[]> getTransformationList(MainPageView.TransformationType
+                                                       selectedTransformation,
+                                               VBox transformationVbox) {
+    if (selectedTransformation == MainPageView.TransformationType.JULIA) {
       return getJuliaTransformation(transformationVbox);
-    } else if (selectedTransformation == TransformationType.AFFINE) {
+    } else if (selectedTransformation == MainPageView.TransformationType.AFFINE) {
       return getAffineTransformation(transformationVbox);
     }
     return new ArrayList<>();
@@ -502,7 +333,7 @@ public class MainPageView extends Scene implements ChaosGameObserver {
   private List<String[]> getJuliaTransformation(VBox transformationVbox) {
     List<String[]> list = new ArrayList<>();
     if (!transformationVbox.getChildren().isEmpty()) {
-      HBox juliaFields = (HBox) transformationVbox.getChildren().get(0);
+      HBox juliaFields = (HBox) transformationVbox.getChildren().getFirst();
       list.add(new String[]{((TextField) juliaFields.getChildren().get(1)).getText(),
               ((TextField) juliaFields.getChildren().get(2)).getText()});
     }
@@ -544,42 +375,56 @@ public class MainPageView extends Scene implements ChaosGameObserver {
   }
 
   /**
-   * Creates a VBox containing a Pane that tracks mouse movement and two TextFields
-   * that display the normalized mouse coordinates within the Pane.
-   * The Pane is 400x400 in size. When the mouse is moved within the Pane, the
-   * coordinates are normalized to the range [-1, 1] and the values are updated
-   * in the TextFields.
+   * Creates a VBox containing input fields for transformations.
    *
-   * @return a VBox containing the Pane and the TextFields
+   * @return a VBox configured with input TextFields.
    */
-  private Pane mouseBox() {
-    StackPane box = new StackPane();
-    box.setPrefWidth(125);
-    box.getStyleClass().add("mouse-box");
-
-    box.getChildren().add(new Label("Hover over me!"));
-
-    box.setOnMouseMoved(e -> {
-      double mouseX = e.getX();
-      double mouseY = e.getY();
-      double normalizedX = (mouseX / box.getWidth()) * 2 - 1;
-      double normalizedY = (mouseY / box.getHeight()) * 2 - 1;
-      updateValues(normalizedX, normalizedY);
-    });
-
-    return box;
+  private VBox createTransformationVbox(ComboBox<TransformationType> transformationComboBox) {
+    VBox vbox = new VBox(10);
+    vbox.setFillWidth(true);
+    vbox.setAlignment(Pos.CENTER);
+    String textBoxText = "Transformation:";
+    if (transformationComboBox.getValue() == TransformationType.AFFINE) {
+      vbox.getChildren().add(
+              new StyledButton("Add Transformation", 250, 20,
+                      e -> eventHandler.handleAddTransformation(vbox,
+                              "Transformation:", DEFAULT_SPACING)
+              )
+      );
+    }
+    if (!controller.isAddingCustomFractal()) {
+      for (double[] coords : TransformationParser.getTransformList(controller.getGame())) {
+        vbox.getChildren().add(createTextBoxWithTextFieldsContainer(DEFAULT_SPACING,
+                textBoxText, 55, 20, coords));
+      }
+    } else if (controller.isAddingCustomFractal()
+            && transformationComboBox.getValue() == TransformationType.JULIA) {
+      vbox.getChildren().add(createTextBoxWithTextFieldsContainer(DEFAULT_SPACING,
+              textBoxText, 55, 20, "c0", "c1"));
+    }
+    return vbox;
   }
 
   /**
-   * Updates the displayed values in the TextFields and triggers a change in the
-   * Julia transformation dynamically.
+   * Creates a generic VBox panel with spacing and alignment.
    *
-   * @param x the normalized x-coordinate in the range [-1, 1]
-   * @param y the normalized y-coordinate in the range [-1, 1]
+   * @return a VBox configured as the main panel.
    */
-  private void updateValues(double x, double y) {
-    controller.changeJuliaTransformationDynamic(x, y);
-    x0Field.setText(String.format(Locale.ENGLISH, "%.5f", x));
-    x1Field.setText(String.format(Locale.ENGLISH, "%.5f", y));
+  private VBox createMainPanel() {
+    VBox panel = new VBox(10);
+    panel.getStyleClass().add("add-panel");
+    panel.setAlignment(Pos.CENTER);
+    return panel;
+  }
+
+  /**
+   * Enum representing the types of transformations.
+   */
+  public enum TransformationType {
+    JULIA, AFFINE
+  }
+
+  public void setSelectedTransformation(TransformationType transformationType) {
+    selectedTransformation = transformationType;
   }
 }
